Fixed projects page tilt bug on mobile

--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -34,7 +34,7 @@
         }
     }
 
-    .filterPane {
+    .filterPaneContainer {
         transform: translate(calc(-4rem - var(--filter-pane-width)), 0rem);
         height: 0;
         display: flex;
@@ -43,6 +43,7 @@
         top: 5rem;
         background-color: var(--color-bg);
         transition: all var(--speed-fast);
+        z-index: 10000;
     }
 
 
@@ -52,6 +53,7 @@
         grid-auto-rows: 1fr;
         grid-template-columns: repeat(3, 1fr);
         transition: all var(--speed-medium);
+        overflow: hidden;
 
         .cardContainer {
             display: flex;
@@ -75,7 +77,7 @@
             margin-bottom: -3rem;
         }
 
-        .filterPane {
+        .filterPaneContainer {
             z-index: 2;
             top: 0px;
             padding: 4.6rem 1rem 0 1rem;
@@ -103,8 +105,8 @@
 @media (max-width: 700px) {
     .projectPage {
 
-        .filterPane {
-            margin: 0 -0.5rem;
+        .filterPaneContainer {
+            margin: 0 -1rem;
             padding: 4.6rem 0 0 0;
         }
 
@@ -131,7 +133,7 @@
     }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 500px) {
     .projectPage {
 
         .grid {
