--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -175,6 +175,7 @@ html {
 
     input {
       outline: none;
+      margin: 0;
     }
 
     textarea:focus,
